--- a/css/style.css
+++ b/css/style.css
@@ -1,222 +1,3 @@
-
-
-/* POSITIONING CSS*/
-/* Display Flex */
-.d-flex {
-    display: flex;
-}
-
-.d-inline-flex {
-    display: inline-flex;
-}
-
-/* Flex Direction */
-.flex-row {
-    flex-direction: row;
-}
-
-.flex-row-reverse {
-    flex-direction: row-reverse;
-}
-
-.flex-column {
-    flex-direction: column;
-}
-
-.flex-column-reverse {
-    flex-direction: column-reverse;
-}
-
-/* Flex Wrap */
-.flex-wrap {
-    flex-wrap: wrap;
-}
-
-.flex-nowrap {
-    flex-wrap: nowrap;
-}
-
-.flex-wrap-reverse {
-    flex-wrap: wrap-reverse;
-}
-
-/* Justify Content */
-.justify-content-start {
-    justify-content: flex-start;
-}
-
-.justify-content-end {
-    justify-content: flex-end;
-}
-
-.justify-content-center {
-    justify-content: center;
-}
-
-.justify-content-between {
-    justify-content: space-between;
-}
-
-.justify-content-around {
-    justify-content: space-around;
-}
-
-.justify-content-evenly {
-    justify-content: space-evenly;
-}
-
-/* Align Items */
-.align-items-start {
-    align-items: flex-start;
-}
-
-.align-items-end {
-    align-items: flex-end;
-}
-
-.align-items-center {
-    align-items: center;
-}
-
-.align-items-baseline {
-    align-items: baseline;
-}
-
-.align-items-stretch {
-    align-items: stretch;
-}
-
-/* Align Content */
-.align-content-start {
-    align-content: flex-start;
-}
-
-.align-content-end {
-    align-content: flex-end;
-}
-
-.align-content-center {
-    align-content: center;
-}
-
-.align-content-between {
-    align-content: space-between;
-}
-
-.align-content-around {
-    align-content: space-around;
-}
-
-.align-content-stretch {
-    align-content: stretch;
-}
-
-/* Align Self */
-.align-self-auto {
-    align-self: auto;
-}
-
-.align-self-start {
-    align-self: flex-start;
-}
-
-.align-self-end {
-    align-self: flex-end;
-}
-
-.align-self-center {
-    align-self: center;
-}
-
-.align-self-baseline {
-    align-self: baseline;
-}
-
-.align-self-stretch {
-    align-self: stretch;
-}
-
-/* Order */
-.order-first {
-    order: -1;
-}
-
-.order-last {
-    order: 13;
-}
-
-.order-0 {
-    order: 0;
-}
-
-.order-1 {
-    order: 1;
-}
-
-.order-2 {
-    order: 2;
-}
-
-.order-3 {
-    order: 3;
-}
-
-.order-4 {
-    order: 4;
-}
-
-.order-5 {
-    order: 5;
-}
-
-.order-6 {
-    order: 6;
-}
-
-.order-7 {
-    order: 7;
-}
-
-.order-8 {
-    order: 8;
-}
-
-.order-9 {
-    order: 9;
-}
-
-.order-10 {
-    order: 10;
-}
-
-.order-11 {
-    order: 11;
-}
-
-.order-12 {
-    order: 12;
-}
-/* Grow and Shrink */
-.flex-grow-0 {
-    flex-grow: 0;
-}
-
-.flex-grow-1 {
-    flex-grow: 1;
-}
-
-.flex-shrink-0 {
-    flex-shrink: 0;
-}
-
-.flex-shrink-1 {
-    flex-shrink: 1;
-}
-.wrapper{
-    width:1250px;
-    margin:0 auto;
-}
-
 /* TEXT */
 .text-center{
     text-align:center;
@@ -227,6 +8,8 @@
 .list-style-none{
     list-style-type: none;
 }
+
+
 
 /*fonts*/
 @font-face {
@@ -245,17 +28,20 @@
 }
 
 
+
 /*eerste deel*/
 body{
     width: 1920px;
     margin: 0;
     background: #1e9ac9;
 }
-
 #pagetop{
     margin-left: 275px;
     margin-right: 275px;
     padding-top: 80px;
+}
+.img-top{
+    padding-top: 70px;
 }
 #pagetop h3{
     font-family:SansPro-Light ;
@@ -267,7 +53,6 @@ body{
     font-size: 36px;
     color: white;
     margin-top: 80px;
-
 }
 .btnheader1{
     padding:10px 20px;
@@ -289,8 +74,9 @@ body{
     text-decoration: none;
 }
 
-/*2de deel*/
 
+
+/*2de deel*/
 #features{
     background: white;
 }
@@ -304,6 +90,8 @@ body{
     font-size: 16px;
 }
 
+
+
 /*made with bootstrap*/
 .container {
     padding: 50px;
@@ -311,73 +99,63 @@ body{
     margin: 0 auto;
     padding-bottom: 0;
 }
-
 h2 {
     text-align: center;
     font-size: 36px;
     margin-bottom: 20px;
 }
-
 p {
     text-align: center;
     color: #666;
 }
-
 .features {
     display: flex;
     justify-content: space-between;
     text-align: center;
     margin-top: 40px;
 }
-
 .feature-item {
     flex-basis: 30%;
 }
-
 .icon img {
     margin-bottom: 20px;
 }
-
 .details {
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
 }
-
 .image {
     flex-basis: 50%;
 }
-
 .text {
     flex-basis: 45%;
 }
-
 .responsive-image {
     width: 100%;
     height: auto;
 }
-
 @media (max-width: 768px) {
-    .features {
+.features {
         flex-direction: column;
-    }
+}
 
-    .feature-item {
-        margin-bottom: 30px;
-    }
+.feature-item {
+    margin-bottom: 30px;
+}
 
-    .details {
-        flex-direction: column;
-    }
+.details {
+    flex-direction: column;
+}
 
-    .image, .text {
-        flex-basis: 100%;
-        text-align: center;
-    }
+.image, .text {
+    flex-basis: 100%;
+    text-align: center;
+}
 
-    .text {
-        margin-top: 30px;
-    }
+.text {
+    margin-top: 30px;
+}
 }
 .bstitel{
     margin-top: 0;
@@ -405,65 +183,52 @@ p {
     align-items: center;
     padding: 20px 0;
 }
-
 .image-section {
     flex-basis: 45%;
     text-align: center;
 }
-
 .image-section img {
     width: 100%;
     max-width: 585px;
 }
-
 .text-section {
     flex-basis: 50%;
 }
-
 .text-section h1 {
     font-size: 2em;
     margin-bottom: 10px;
 }
-
 .text-section p {
     margin-bottom: 20px;
     color: #666;
 }
-
 .feature {
     display: flex;
     align-items: flex-start;
     margin-bottom: 15px;
 }
-
 .icon {
     width: 60px;
     margin-top: 18.72px;
-
 }
 .icon2 {
     width: 30px;
     margin-top: 18.72px;
-
 }
 
 .feature-text h3 {
     color: #9acd32;
     margin-bottom: 5px;
 }
-
 .documentation-section .text-section {
     order: 2;
 }
-
 .documentation-section .image-section {
     order: 1;
 }
-
 .app-feature-section .text-section {
     order: 1;
 }
-
 .app-feature-section .image-section {
     order: 2;
 }
@@ -474,17 +239,13 @@ p {
     background-color: #f7f7f9;
 }
 
-/*awesome features*/
-
 
 /*newsletter*/
 .newsletter-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
-    height: 100vh;
     margin: 0;
 }
 .newsletter-section h2,
@@ -495,19 +256,16 @@ p {
 #newsletter_form {
     margin-bottom: 20px;
 }
-
 .subscribe-form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .subscribe-input {
     padding: 10px;
     margin-bottom: 10px;
     width: 250px;
 }
-
 .subscribe-submit {
     padding: 10px 20px;
     cursor: pointer;
@@ -759,4 +517,285 @@ p {
     100% {
         opacity: 1;
     }
+}
+.wobble-hor-bottom {
+    -webkit-animation: wobble-hor-bottom 1.2s infinite both;
+    animation: wobble-hor-bottom 1.2s infinite both;
+}
+@-webkit-keyframes wobble-hor-bottom {
+    0%,
+    100% {
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+    }
+    15% {
+        -webkit-transform: translateX(-30px) rotate(-6deg);
+        transform: translateX(-30px) rotate(-6deg);
+    }
+    30% {
+        -webkit-transform: translateX(15px) rotate(6deg);
+        transform: translateX(15px) rotate(6deg);
+    }
+    45% {
+        -webkit-transform: translateX(-15px) rotate(-3.6deg);
+        transform: translateX(-15px) rotate(-3.6deg);
+    }
+    60% {
+        -webkit-transform: translateX(9px) rotate(2.4deg);
+        transform: translateX(9px) rotate(2.4deg);
+    }
+    75% {
+        -webkit-transform: translateX(-6px) rotate(-1.2deg);
+        transform: translateX(-6px) rotate(-1.2deg);
+    }
+}
+@keyframes wobble-hor-bottom {
+    0%,
+    100% {
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+    }
+    15% {
+        -webkit-transform: translateX(-30px) rotate(-6deg);
+        transform: translateX(-30px) rotate(-6deg);
+    }
+    30% {
+        -webkit-transform: translateX(15px) rotate(6deg);
+        transform: translateX(15px) rotate(6deg);
+    }
+    45% {
+        -webkit-transform: translateX(-15px) rotate(-3.6deg);
+        transform: translateX(-15px) rotate(-3.6deg);
+    }
+    60% {
+        -webkit-transform: translateX(9px) rotate(2.4deg);
+        transform: translateX(9px) rotate(2.4deg);
+    }
+    75% {
+        -webkit-transform: translateX(-6px) rotate(-1.2deg);
+        transform: translateX(-6px) rotate(-1.2deg);
+    }
+}
+
+
+
+/* POSITIONING CSS*/
+/* Display Flex */
+.d-flex {
+    display: flex;
+}
+
+.d-inline-flex {
+    display: inline-flex;
+}
+
+/* Flex Direction */
+.flex-row {
+    flex-direction: row;
+}
+
+.flex-row-reverse {
+    flex-direction: row-reverse;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.flex-column-reverse {
+    flex-direction: column-reverse;
+}
+
+/* Flex Wrap */
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex-nowrap {
+    flex-wrap: nowrap;
+}
+
+.flex-wrap-reverse {
+    flex-wrap: wrap-reverse;
+}
+
+/* Justify Content */
+.justify-content-start {
+    justify-content: flex-start;
+}
+
+.justify-content-end {
+    justify-content: flex-end;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-between {
+    justify-content: space-between;
+}
+
+.justify-content-around {
+    justify-content: space-around;
+}
+
+.justify-content-evenly {
+    justify-content: space-evenly;
+}
+
+/* Align Items */
+.align-items-start {
+    align-items: flex-start;
+}
+
+.align-items-end {
+    align-items: flex-end;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.align-items-baseline {
+    align-items: baseline;
+}
+
+.align-items-stretch {
+    align-items: stretch;
+}
+
+/* Align Content */
+.align-content-start {
+    align-content: flex-start;
+}
+
+.align-content-end {
+    align-content: flex-end;
+}
+
+.align-content-center {
+    align-content: center;
+}
+
+.align-content-between {
+    align-content: space-between;
+}
+
+.align-content-around {
+    align-content: space-around;
+}
+
+.align-content-stretch {
+    align-content: stretch;
+}
+
+/* Align Self */
+.align-self-auto {
+    align-self: auto;
+}
+
+.align-self-start {
+    align-self: flex-start;
+}
+
+.align-self-end {
+    align-self: flex-end;
+}
+
+.align-self-center {
+    align-self: center;
+}
+
+.align-self-baseline {
+    align-self: baseline;
+}
+
+.align-self-stretch {
+    align-self: stretch;
+}
+
+/* Order */
+.order-first {
+    order: -1;
+}
+
+.order-last {
+    order: 13;
+}
+
+.order-0 {
+    order: 0;
+}
+
+.order-1 {
+    order: 1;
+}
+
+.order-2 {
+    order: 2;
+}
+
+.order-3 {
+    order: 3;
+}
+
+.order-4 {
+    order: 4;
+}
+
+.order-5 {
+    order: 5;
+}
+
+.order-6 {
+    order: 6;
+}
+
+.order-7 {
+    order: 7;
+}
+
+.order-8 {
+    order: 8;
+}
+
+.order-9 {
+    order: 9;
+}
+
+.order-10 {
+    order: 10;
+}
+
+.order-11 {
+    order: 11;
+}
+
+.order-12 {
+    order: 12;
+}
+/* Grow and Shrink */
+.flex-grow-0 {
+    flex-grow: 0;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
+
+.flex-shrink-1 {
+    flex-shrink: 1;
+}
+.wrapper{
+    width:1250px;
+    margin:0 auto;
 }
